# OrganizeMedia

./: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  main.cpp  main_gui.cpp  renderer.cpp  renderer.hpp  rmg_config.json
.github/workflows/: build.yml  linux-test.yml
